# valtimo

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  composer.json  entrypoint.sh  package.json  phpcs.xml  phpmd.xml  psalm.xml  pyproject.toml  requirements-dev.txt  requirements.txt  webpack.config.js
.github/workflows/: beta-release.yaml  build-exapp.yaml  code-quality.yml  pull-request-from-branch-check.yaml  push-development-to-beta.yaml  release-workflow.yaml  unstable-release.yaml
appinfo/: info.xml
css/: style.css
ex_app/lib/: main.py
lib/AppInfo/: Application.php
lib/Controller/: PageController.php
src/: App.vue  main.js
templates/: index.php
